# Ink-Step-Debugger

./: Cargo.toml  Guide.md
ink-dap-server/: .gitignore  Cargo.toml  README.md
ink-dap-server/src/: command_handler.rs  log.rs  main.rs  service.rs  state.rs  types.rs  utils.rs
ink-debug-rpc/: Cargo.toml
ink-debug-rpc/src/: lib.rs  sandbox_rpc.rs
ink-debugger/: Cargo.toml
ink-debugger/crates/ink/: Cargo.toml
ink-debugger/crates/ink/crates/primitives/: Cargo.toml
ink-debugger/crates/pallet-revive-0.5.0/src/wasm/: mod.rs
ink-debugger/drink/test-macro/: Cargo.toml
ink-debugger/drink/test-macro/src/: contract_building.rs
ink-trace-extension/: .gitignore  package-lock.json
ink-trace-extension/src/: extension.ts
