[workspace]
resolver = "2"

members = ["drink", "drink/test-macro", "drink-cli"]

exclude = ["examples", "crates"]

[workspace.package]
authors = ["Cardinal", "Use Ink <ink@use.ink>"]
edition = "2021"
homepage = "https://github.com/use-ink/drink"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/drink"
version = "0.19.0-alpha"


[workspace.dependencies]
anyhow = { version = "1.0.94" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { version = "6.0.0-beta.1" }
contract-metadata = { version = "6.0.0-beta.1" }
contract-transcode = { version = "6.0.0-beta.1" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
darling = { version = "0.20.3" }
parity-scale-codec = { version = "3.6.9" }
parity-scale-codec-derive = { version = "3.6.9" }
paste = { version = "1.0.7" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale-info = { version = "2.10.0" }
serde_json = { version = "1.0.133" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }
ink_sandbox = { path = "crates/ink/crates/e2e/sandbox" }
ink_primitives = { path = "crates/ink/crates/primitives" }

# Substrate dependencies

frame-system = { version = "40.1.0" }
frame-support = { version = "40.1.0" }
sp-runtime-interface = { version = "29.0.1" }

# Local dependencies

drink = { version = "=0.19.0-alpha", path = "drink" }
drink-test-macro = { version = "=0.19.0-alpha", path = "drink/test-macro" }

# Redirect polkadot-sdk registry crates to the git fork so that all crates
# use the same source and avoid type incompatibilities with git pallet-revive.
[patch.crates-io]
frame-support = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
frame-support-procedural = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
frame-support-procedural-tools = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
frame-support-procedural-tools-derive = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
frame-system = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
frame-benchmarking = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-balances = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-timestamp = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-transaction-payment = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-revive = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-revive-proc-macro = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-revive-uapi = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-revive-fixtures = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
pallet-asset-conversion = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-api = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-api-proc-macro = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-application-crypto = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-arithmetic = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-consensus-aura = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-consensus-babe = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-consensus-slots = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-core = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-crypto-hashing = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-crypto-hashing-proc-macro = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-debug-derive = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-externalities = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-genesis-builder = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-inherents = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-io = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-keystore = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-metadata-ir = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-panic-handler = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-runtime = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-runtime-interface = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-runtime-interface-proc-macro = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-staking = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-state-machine = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-std = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-storage = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-timestamp = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-tracing = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-trie = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-version = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-version-proc-macro = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-wasm-interface = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
sp-weights = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
staging-xcm = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
staging-xcm-builder = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
staging-xcm-executor = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
xcm-procedural = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
polkadot-core-primitives = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
polkadot-parachain-primitives = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
binary-merkle-tree = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
substrate-bip39 = { git = "https://github.com/NeonMaliket/polkadot-sdk", branch = "ink-step-debugger" }
